SERVER-37118: Fix invokation argument order

(cherry picked from commit fbeeccc651d7f88dea0ea36623470d3d46e615db)